# cybully

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_ROADMAP.md  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  user.json
.claude/: settings.json
apps/web/: Dockerfile  next-env.d.ts  next.config.mjs  package.json  tailwind.config.ts  vitest.config.ts
apps/web/src/: middleware.ts  types.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AppShell.tsx  AuthPanel.tsx  BrandLogo.tsx  ChangePasswordForm.tsx  IncidentDashboard.tsx  IncidentReviewPanel.tsx  ProfileMenu.tsx  SeverityBadge.tsx  (+2 more)
scripts/: create_supabase_user.sh  demo_payloads.http  localization_samples.json
services/api/: .dockerignore  Dockerfile  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 202605180001_initial_mvp.py  202605200001_add_moderation_audit_fields.py
services/api/app/: __init__.py  db.py  diagnostics.py  main.py  models.py  queues.py  repository.py  schemas.py  severity.py
services/api/app/core/: config.py  database_url.py  security.py
services/api/app/ml/: __init__.py  detoxify_model.py  factory.py  heuristic_model.py
services/api/app/services/: __init__.py  moderation.py
services/api/app/workers/: __init__.py  alerts.py  inference.py  persistence.py
services/api/scripts/: start.sh
services/api/tests/: test_api.py  test_config.py  test_database_url.py  test_heuristic_model.py  test_scorer_factory.py  test_security.py  test_severity.py
supabase/: schema.sql
(+29 files in other folders)
