[project]
name = "cybully-api"
version = "0.1.0"
description = "FastAPI and worker services for the Cybully MVP moderation pipeline."
requires-python = ">=3.11"
dependencies = [
  "aio-pika>=9.5,<10",
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "greenlet>=3.1,<4",
  "httpx>=0.28,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.8,<3",
  "python-dateutil>=2.9,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "uvicorn[standard]>=0.34,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1"
]
ml = [
  "detoxify>=0.5.2,<1"
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
